# spotigram

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  spotify.py
src/: config.py  main.py  schemas.py  spotify.py  telegram.py  utils.py
