[tool.poetry]
name = "spotigram"
version = "0.1.0"
description = ""
authors = ["Ivan Mihun <vsk76090@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
telethon = "^1.35.0"
pydantic-settings = "^2.2.1"
spotipy = "^2.23.0"
pydantic = "^2.7.1"

[tool.poetry.group.tray.dependencies]
pystray = "^0.19.5"

[tool.poetry.group.dev.dependencies]
auto-py-to-exe = "^2.43.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
