[project]
name = "spotigram"
version = "0.1.0"
description = "A lightweight app that automatically updates your Telegram bio to display the Spotify track you are currently listening to and sets a Spotify icon as your emoji status."
requires-python = ">=3.13"
dependencies = [
    "telethon>=1.35.0,<2.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "spotipy>=2.23.0,<3.0.0",
    "pydantic>=2.7.1,<3.0.0",
    "pystray>=0.19.5,<0.20.0",
]

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.46.0",
]
